--- a/src/app/modules/landing/components/title-paragraph/title-paragraph.css
+++ b/src/app/modules/landing/components/title-paragraph/title-paragraph.css
@@ -1,5 +1,5 @@
 p{
-  width: 70%;
+  width: 100%;
   text-align: center;
   color: var(--neutral-400);
   line-height: 1.5;
